--- a/style.css
+++ b/style.css
@@ -12,35 +12,77 @@ body {
 }
 
 header {
-
+    height: 95vh;
     color: #fff;
-    padding-bottom: 100px;
-    background-size: 100% 100%, cover;
+    font-weight: 600;
+    position: relative;
+    /* padding-bottom: 200px; */
+    background-size: 200%, 200%, cover;
     background-repeat: no-repeat;
     background-image: url(./images/pageheader-banner.jpg);
+    border: 0.1px solid rgb(0, 0, 0, 0.3);
+
 }
 
+.nav_toggle{
+    display: none;
+}
 
 nav {
 
-    padding: 15px 150px;
+    padding: 5px 150px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    transition: 0.6s;
+}
+
+.navbar_left h1 {
+    padding-top: 2%;
+    font-size: 50px;
+
 }
 
 .navbar_left h1 span {
     text-transform: uppercase;
     color: #F38708;
+    font-size: 55px;
 }
 
 .navbar_right ul a {
+    position: relative;
+    font-weight: 600;
     text-decoration: none;
-    margin-right: 15px;
+    margin-right: 20px;
     color: #fff;
 }
 
-.navbar_right ul a button {
+.navbar_right ul a:hover {
+    color: #F38708;
+    border-bottom: 2px solid #F38708;
+}
+
+nav.sticky {
+    height: 10%;
+    color: #000;
+    background-color: #fff;
+    box-shadow: 3px 0 10px rgb(0, 0, 0, 0.3);
+}
+
+nav.sticky .navbar_right ul a {
+    color: #000;
+}
+
+nav.sticky .navbar_right ul a:hover {
+    color: #F38708;
+}
+
+.navbar_right ul button {
+    font-weight: 600;
     font-family: 'Open Sans', sans-serif;
     text-transform: uppercase;
     outline: none;
@@ -50,11 +92,13 @@ nav {
     border-top-left-radius: 15px;
     border-bottom-right-radius: 15px;
     color: #fff;
+    cursor: pointer;
 }
+
 
 header .container {
     padding: 0 150px;
-    margin-top: 150px;
+    margin-top: 200px;
     text-align: center;
 }
 
@@ -71,6 +115,8 @@ header .container p {
     background-color: #F38708;
     padding: 10px 15px;
     color: #fff;
+    font-weight: 600;
+    cursor: pointer;
 }
 
 .container .btn_box .btn_reservation {
@@ -81,4 +127,352 @@ header .container p {
     background-color: #2E72D5;
     padding: 10px 15px;
     color: #fff;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+
+/* ********************************************* ABOUT STYLE *************************************** */
+
+.box_about {
+    display: flex;
+    justify-content: space-between;
+    margin: 7% 10%;
+}
+
+.box_about1 {
+    margin-top: -2%;
+}
+
+.box_about .box_about1 h1 span {
+    font-size: 80px;
+    color: #F38708;
+}
+
+.box_about .box_about1 p {
+    text-align: justify;
+    width: 550px;
+}
+
+.box_about .box_about1 h1 {
+    text-transform: capitalize;
+    margin-bottom: 5%;
+    font-size: 50px;
+}
+
+.box_about .plat_3 img {
+    width: 370px;
+    height: 280px;
+    margin-left: -30%;
+}
+
+
+/* ************************************** MENU STYLE ****************************** */
+
+.menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* align-items: center; */
+}
+
+
+
+section .box_menu {
+    text-align: center;
+
+    margin-bottom: 3%;
+}
+
+section .box_menu h1 {
+    text-transform: capitalize;
+    font-size: 50px;
+}
+
+section .box_menu h1 span {
+    color: #F38708;
+    font-size: 80px;
+}
+
+.menu_images {
+    gap: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.menu_images .img_box {
+    width: 20%;
+    height: 250px;
+    text-align: center;
+    box-shadow: 5px 5px 5px 5px rgb(128, 121, 121);
+    margin-bottom: 10px;
+    border: 15px solid #fff;
+}
+
+.menu_images .img_box img {
+    width: 100%;
+    height: 85%;
+    object-fit: cover;
+}
+
+.btn-menu {
+    text-align: center;
+}
+
+
+section button {
+
+    font-family: 'Open Sans', sans-serif;
+    text-transform: uppercase;
+    outline: none;
+    border: none;
+    background-color: #F38708;
+    padding: 10px 15px;
+    color: #fff;
+    border-top-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    margin-top: 1%;
+    /* text-align: center; */
+
+}
+
+
+
+
+
+/* ************************************ NOS EXPERTS ***************************************************** */
+
+.experts {
+    display: flex;
+    flex-direction: column;
+}
+
+.text_expert {
+    text-align: center;
+    margin-top: 3%;
+}
+
+.text_expert h1 {
+    text-transform: capitalize;
+    font-size: 50px;
+    /* font-weight: 600; */
+}
+
+.text_expert h1 span {
+    color: #F38708;
+    font-size: 80px;
+}
+
+.images_expert {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    margin-top: 3%;
+}
+
+.images_expert img {
+    width: 150px;
+    height: 200px;
+    object-fit: cover;
+}
+
+.images_expert p {
+    text-align: center;
+}
+
+/* +++++++++++++++++++++++++++++++++++++++++++++ AVIS-CLIENTS-STYLE +++++++++++++++++++++++++++++++++++++++  */
+
+
+.box_clients {
+    color: #fff;
+    background-size: 100% 100% cover;
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-image: url(./images/bg2.jpg);
+    height: 700px;
+
+}
+
+.box_clients h1 {
+    text-align: center;
+    text-transform: capitalize;
+    margin-top: 5%;
+    padding-top: 2%;
+    font-size: 50px;
+}
+
+.box_clients h1 span {
+    color: #F38708;
+    font-size: 80px;
+}
+
+.box_clients p {
+    text-align: center;
+    margin-top: 1%;
+}
+
+.box_avis_clients {
+    display: flex;
+    justify-content: center;
+    gap: 25px;
+    margin-top: 1.5%;
+
+}
+
+.client_1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 15%;
+    padding-top: 0;
+    padding-bottom: 2%;
+    margin-bottom: 5%;
+    margin-top: 2%;
+    border-radius: 5%;
+    background-color: #fff;
+    height: 400px;
+
+}
+
+.box_avis_clients .client_1 img {
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    margin-bottom: 5%;
+    border: 5px solid #F38708;
+    object-fit: cover;
+}
+
+.box_avis_clients .client_1 p {
+    width: 80%;
+    text-align: center;
+    color: darkgray;
+    margin-top: 3%;
+}
+
+.box_avis_clients .client_1 a {
+    color: #F38708;
+    text-decoration: none;
+    margin-top: 10%;
+}
+
+/* .box_avis_clients .client_2 img{
+    width: 70px;
+    height: 70px;
+}
+
+.box_avis_clients .client_3 img{
+    width: 70px;
+    height: 70px;
+} */
+
+
+
+
+/* ******************************* FOOTER ****************************************** */
+
+footer {
+
+    background-position: top center;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-image: url(./images/img-form.jpg);
+    height: 650px;
+    margin-top: 5%;
+}
+
+footer .description {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 5%;
+    padding-top: 6%;
+}
+
+footer h1 {
+    margin-top: -2%;
+    text-transform: capitalize;
+    font-size: 50px;
+    /* font-size: 10%; */
+}
+
+footer .description h1 span {
+    color: #F38708;
+    font-size: 80px;
+
+}
+
+footer p {
+    margin-top: 0.5%;
+}
+
+footer form {
+
+    width: 25%;
+    height: 10%;
+    margin-top: 1.5%;
+    padding-top: 3.5%;
+    padding-bottom: 4%;
+    padding-left: 2%;
+    padding-right: 2%;
+    background-color: #fff;
+}
+
+footer form h2 {
+    margin-bottom: 2%;
+}
+
+footer form input,
+textarea {
+    font-family: 'Open Sans', sans-serif;
+    width: 100%;
+    height: 100%;
+    padding: 10px 5px;
+    margin: 10px 0;
+    border-radius: 5px;
+    border: 2px solid darkgray;
+    /* margin-left: 5%; */
+
+}
+
+footer form button {
+    font-family: 'Open Sans', sans-serif;
+    text-transform: uppercase;
+    outline: none;
+    border: none;
+    background-color: #F38708;
+    padding: 10px 15px;
+    border-top-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    color: #fff;
+
+}
+
+.copyright {
+    text-align: center;
+    width: 100%;
+    height: 35px;
+    border: none;
+}
+
+.copyright a {
+    color: #F38708;
+    text-transform: capitalize;
+    text-decoration: none;
+
+}
+
+.copyright p {
+    margin-top: 19px;
+}
+
+
+
+@media all and (max-width: 720px){
+    nav{
+        flex-direction: column;
+    }
 }
